<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/sb_white"
    android:layout_height="match_parent">

    <include layout="@layout/custom_actionbar"/>

    <include layout="@layout/shop_toolbar"/>

    <RelativeLayout
        android:id="@+id/invoice_panel"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/space_3x"
        android:layout_marginRight="@dimen/space_3x"
        android:layout_height="wrap_content">

        <TextView
            android:text="ORD4242"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_3x"
            android:id="@+id/txt_order_id" />

        <TextView
            android:layout_below="@id/txt_order_id"
            android:layout_marginTop="@dimen/space_0_6x"
            android:text="@string/order_id"
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/head_order_id" />

        <TextView
            android:layout_below="@id/head_order_id"
            android:text="4242.42"
            android:layout_marginTop="@dimen/space_2x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_3x"
            android:id="@+id/txt_amt_pay" />

        <TextView
            android:layout_below="@id/txt_amt_pay"
            android:layout_marginTop="@dimen/space_0_6x"
            android:text="@string/amt_pay"
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/head_amt_pay" />

        <ImageView
            android:id="@+id/order_qrcode"
            android:src="@drawable/img_qrcode"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/qrcode"
            android:layout_height="@dimen/qrcode" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/payment_details"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space_2x"
        android:layout_marginLeft="@dimen/space_3x"
        android:layout_marginRight="@dimen/space_3x"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/total_items"
            android:letterSpacing="0.2"
            android:layout_marginTop="@dimen/space_1x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/head_total_items" />

        <TextView
            android:text="44"
            android:layout_marginTop="@dimen/space_1x"
            android:layout_alignParentRight="true"
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/txt_total_items" />

        <TextView
            android:layout_below="@id/head_total_items"
            android:layout_marginTop="@dimen/space_1x"
            android:text="@string/sub_total"
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/head_sub_total" />

        <TextView
            android:layout_below="@id/txt_total_items"
            android:layout_marginTop="@dimen/space_1x"
            android:text="0.0"
            android:layout_alignParentRight="true"
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/txt_sub_total" />

        <TextView
            android:layout_below="@id/head_sub_total"
            android:layout_marginTop="@dimen/space_1x"
            android:text="@string/discount"
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/head_discount" />

        <TextView
            android:layout_below="@id/txt_sub_total"
            android:layout_marginTop="@dimen/space_1x"
            android:text="0.0"
            android:layout_alignParentRight="true"
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_green"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/txt_discount" />

        <TextView
            android:layout_below="@id/head_discount"
            android:layout_marginTop="@dimen/space_1x"
            android:text="@string/tax"
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_black"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/head_tax" />

        <TextView
            android:layout_below="@id/txt_discount"
            android:layout_marginTop="@dimen/space_1x"
            android:text="0.0"
            android:layout_alignParentRight="true"
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sb_red"
            android:textAllCaps="true"
            android:textSize="@dimen/font_1x"
            android:id="@+id/txt_tax" />

        <View
            android:layout_below="@id/head_tax"
            android:layout_marginTop="@dimen/space_1x"
            android:layout_marginBottom="@dimen/space_1x"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:id="@+id/pay_sep"
            android:background="@color/sb_grey"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@id/pay_sep"
            android:layout_marginTop="@dimen/space_2x"
            android:id="@+id/custom_status_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_status_height">

            <TextView
                android:id="@+id/status_step1"
                android:background="@drawable/sb_status_bar_start_background"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/status_step2"
                android:background="@color/sb_green"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/status_step3"
                android:background="@color/sb_blue"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/status_step4"
                android:background="@drawable/sb_status_bar_end_background"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="match_parent" />


        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/space_2x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orde_status_text"
            android:lineSpacingExtra="2dp"
            android:text="@string/order_status_4"
            android:layout_below="@id/custom_status_bar"
            android:textColor="@color/sb_dark_grey"
            android:textAlignment="center"
            android:textSize="@dimen/font_1x"/>

    </RelativeLayout>


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:id="@+id/proceed_button"
            android:textAllCaps="true"
            android:layout_margin="@dimen/space_2x"
            android:letterSpacing="0.2"
            android:layout_height="@dimen/button_large"
            android:background="@drawable/sb_ripple_black_button"
            android:layout_alignParentBottom="true"
            android:textColor="@color/sb_white"
            android:textSize="@dimen/font_button"
            android:text="@string/new_order" />

    </RelativeLayout>

</LinearLayout>
